Only use iOS zoom fix font size on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -161,17 +161,7 @@ main {
 	padding: 0 2.5rem;
 }
 
-@media screen and (max-width: 600px) {
-	main {
-		height: calc(100vh - 2rem);
-		height: calc(100svh - 2rem);
-		margin: 1rem auto;
-		padding: 0 1rem;
-	}
-}
-
 textarea {
-	font-size: 1rem;
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
@@ -183,6 +173,19 @@ textarea {
 
 textarea:focus {
 	outline: none;
+}
+
+@media screen and (max-width: 600px) {
+	main {
+		height: calc(100vh - 2rem);
+		height: calc(100svh - 2rem);
+		margin: 1rem auto;
+		padding: 0 1rem;
+	}
+
+	textarea {
+		font-size: 1rem;
+	}
 }
 
 footer {
